# sprout

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  start_dev.py
blogs_api/: Dockerfile  pyproject.toml
blogs_api/blogs_api/: app.py  config.py
blogs_api/blogs_api/api/: posts.py
blogs_api/blogs_api/core/: exceptions.py
blogs_api/blogs_api/core/persistence/: blog_posts.py
blogs_api/blogs_api/core/schemas/: blog_posts.py
blogs_api/blogs_api/core/services/: content_moderation_service.py
blogs_api/scripts/: start_webserver.py
blogs_api/tests/: conftest.py  test_api.py  test_moderation_service.py
docker/dynamodb/: shared-local-instance.db
moderation_service/: Dockerfile  pyproject.toml
moderation_service/moderation_service/: app.py  config.py
moderation_service/moderation_service/core/schemas/: sentence.py
moderation_service/moderation_service/core/services/: moderate_sentences.py
moderation_service/scripts/: start_webserver.py
moderation_service/tests/: conftest.py  test_api.py  test_moderate_sentences_module.py
sprout/: app.py  config.py
sprout/api/: posts.py
sprout/core/: exceptions.py
sprout/core/persistence/: blog_posts.py
sprout/core/services/: content_moderation_service.py
tests/: conftest.py  test_sprout.py
