[tool.poetry]
name = "sprout"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
boto3 = "^1.24.91"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
moto = "^4.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
