[tool.poetry]
name = "moderation_service"
version = "0.1.0"
description = ""
authors = ["Kieran Lavelle"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
