[tool.poetry]
name = "moderation_service"
version = "0.1.0"
description = ""
authors = ["Kieran Lavelle"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "scripts.start_webserver:start"
